--- a/md-template.tex
+++ b/md-template.tex
@@ -19,3 +19,9 @@
 
 \end{markdown}
 \end{document}
+
+%% COMMENTS %%
+To use latex commands within a markdown environment use the "hybrid" option
+\usepackage[hybrid]{markdown}
+
+full options: \usepackage[footnotes,definitionLists,hashEnumerators,smartEllipses,hybrid]{markdown}
